# SteamServer

./: .clang-format  .deepsource.toml  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  steam_appid.txt  vcpkg.json
.github/workflows/: cmake.yml
CEngine/: CMakeLists.txt
CEngine/Sources/: Engine.cpp  Engine.hpp  main.cpp
Sources/: engine.cpp  engine.hpp
Steam/: CMakeLists.txt
Steam/Sources/: engine.cpp  engine.hpp
Steam/script/: steamlib.py
cmake/: steamwork.cmake
script/: steamlib.py  vcpkg.py
